--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -72,7 +72,7 @@ const projects = (await getCollection('work'))
 				</div>
 
 				<div class="cta">
-					<CallToAction href="/work/">
+					<CallToAction href="/portfolio-2025-2/work/">
 						View All
 						<Icon icon="arrow-right" size="1.2em" />
 					</CallToAction>
