--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,14 +30,14 @@ const projects = (await getCollection('work'))
 		<div class="wrapper stack gap-8 lg:gap-20">
 			<header class="hero">
 				<Hero
-					title="Hello, my name is Jeanine White"
-					tagline="I am a Creative Developer who is currently based in Portland, Oregon."
+					title="Bonjour,je m'appelle Manu Andriamihaja"
+					tagline="Je suis un étudiant en deuxième année de BUT Informatique à l'IUT de Montpellier-Sète."
 					align="start"
 				>
 					<div class="roles">
-						<Pill><Icon icon="code" size="1.33em" /> Developer</Pill>
-						<Pill><Icon icon="microphone-stage" size="1.33em" /> Speaker</Pill>
-						<Pill><Icon icon="pencil-line" size="1.33em" /> Writer</Pill>
+						<Pill><Icon icon="code" size="1.33em" /> Développement</Pill>
+						<Pill><Icon icon="microphone-stage" size="1.33em" /> Base de données</Pill>
+						<Pill><Icon icon="pencil-line" size="1.33em" /> Management</Pill>
 					</div>
 				</Hero>
 
@@ -55,8 +55,8 @@ const projects = (await getCollection('work'))
 		<main class="wrapper stack gap-20 lg:gap-48">
 			<section class="section with-background with-cta">
 				<header class="section-header stack gap-2 lg:gap-4">
-					<h3>Selected Work</h3>
-					<p>Take a look below at some of my featured work for clients from the past few years.</p>
+					<h3>Mes projets</h3>
+					<p>Découvrez mes derniers projets académiques !</p>
 				</header>
 
 				<div class="gallery">
