modif dans about 2

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -22,7 +22,7 @@ import CallToAction from "../components/CallToAction.astro";
 			</Hero>
 
 			<section>
-				<h2 class="section-title">Background</h2>
+				<h2 class="section-title">Qui suis-je ?</h2>
 				<div class="content">
 					<p>
 						Je m’appelle Manu Andriamihaja, je suis en ce moment en deuxième année de BUT Informatique à l’IUT de Montpellier-Sète, spécialité Intégration d’Applications et Management du Système d’Information.
