modif dans skill

--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -5,18 +5,18 @@ import Icon from './Icon.astro';
 <section class="box skills">
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="terminal-window" color="var(--accent-regular)" size="2.5rem" gradient />
-		<h2>Full Stack</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
+		<h2>Du Dev de qualité supérieur</h2>
+		<p>J'ai surtout travaillé sur des projets en Java, ainsi que sur des projets web en HTML/CSS utilisant PHP, sans oublier le SQL et PL/SQL.</p>
 	</div>
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="trophy" color="var(--accent-regular)" size="2.5rem" gradient />
-		<h2>Industry Leader</h2>
-		<p>Neque viverra justo nec ultrices dui. Est ultricies integer quis auctor elit.</p>
+		<h2>Travail en équipe</h2>
+		<p>J'ai eu l'occasion de collaborer sur divers projets académiques avec plusieurs personnes. Cela me poussait à m'adapter en fonction de chacun des membres du groupe. </p>
 	</div>
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="strategy" color="var(--accent-regular)" size="2.5rem" gradient />
-		<h2>Strategy-Minded</h2>
-		<p>Urna porttitor rhoncus dolor purus non enim praesent ornare.</p>
+		<h2>Motivé et rigoureux</h2>
+		<p>Je m'investis pleinement dans chaque projet que j'entreprends, sans jamais sous-estimer le travail à réaliser.</p>
 	</div>
 </section>
 
