--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -14,7 +14,6 @@ const textLinks: { label: string; href: string }[] = [
 const iconLinks: { label: string; href: string; icon: keyof typeof iconPaths }[] = [
 	{ label: 'Linkedin', href: 'https://linkedin.com/in/manu-andriamihaja', icon: 'linkedin-logo' },
 	{ label: 'GitHub', href: 'https://github.com/harutsukiGo', icon: 'github-logo' },
-	{ label: 'GitLab', href: 'https://gitlabinfo.iutmontp.univ-montp2.fr/andriamihajam', icon: 'gitlab-logo' },
 ];
 
 
@@ -31,7 +30,7 @@ const isCurrentPage = (href: string) => {
 	<div class="menu-header">
 		<a href="/" class="site-title">
 			<Icon icon="terminal-window" color="var(--accent-regular)" size="1.6em" gradient />
-			Jeanine White
+			Manu Andriamihaja
 		</a>
 		<menu-button>
 			<template>
