--- a/src/components/ContactCTA.astro
+++ b/src/components/ContactCTA.astro
@@ -4,8 +4,8 @@ import Icon from './Icon.astro';
 ---
 
 <aside>
-	<h2>Interested in working together?</h2>
-	<CallToAction href="mailto:me@example.com">
+	<h2>Envie de travailler avec moi ?</h2>
+	<CallToAction href="manu.andriamihaja-razafimnajato@etu.umontpellier.fr">
 		Send Me a Message
 		<Icon icon="paper-plane-tilt" size="1.2em" />
 	</CallToAction>
