Ajout du cv +modif dans contact et about

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -57,7 +57,7 @@ import CallToAction from "../components/CallToAction.astro";
 						<li>Bases de données : SQL, PL/SQL, JDBC</li>
 					</ul>
 					<br>
-					<CallToAction href="/cv/CV ~Andriamihaja Manu.pdf">Mon CV</CallToAction>
+					<CallToAction href="/portfolio-2025-2/cv/CV ~Andriamihaja Manu.pdf">Mon CV</CallToAction>
 
 				</div>
 			</section>
