--- a/src/components/ContactCTA.astro
+++ b/src/components/ContactCTA.astro
@@ -6,7 +6,7 @@ import Icon from './Icon.astro';
 <aside>
 	<h2>Envie de travailler avec moi ?</h2>
 	<CallToAction href="manu.andriamihaja-razafimnajato@etu.umontpellier.fr">
-		Send Me a Message
+		Envoyez-moi un message
 		<Icon icon="paper-plane-tilt" size="1.2em" />
 	</CallToAction>
 </aside>
