--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -14,14 +14,14 @@ const projects = (await getCollection('work')).sort(
 ---
 
 <BaseLayout
-	title="My Work | Jeanine White"
-	description="Learn about Jeanine White's most recent projects"
+	title="Mes projets | Manu Andriamihaja"
+	description="Aperçu de mes projets académiques et professionnels."
 >
 	<div class="stack gap-20">
 		<main class="wrapper stack gap-8">
 			<Hero
-				title="My Work"
-				tagline="See my most recent projects below to get an idea of my past experience."
+				title="Mes projets"
+				tagline="Découvrez mes derniers projets académiques et professionnels."
 				align="start"
 			/>
 			<Grid variant="offset">
