--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -16,8 +16,8 @@ import CallToAction from "../components/CallToAction.astro";
 				<img
 					width="1553"
 					height="873"
-					src="/assets/at-work.jpg"
-					alt="Jeanine White at work with a colleague"
+					src="/portfolio-2025-2/assets/me.jpg"
+					alt="Manu Andriamihaja"
 				/>
 			</Hero>
 
