--- a/src/pages/work/[...slug].astro
+++ b/src/pages/work/[...slug].astro
@@ -33,7 +33,7 @@ const { Content } = await render(entry);
 		<div class="stack gap-15">
 			<header>
 				<div class="wrapper stack gap-2">
-					<a class="back-link" href="/work/"><Icon icon="arrow-left" /> Projets</a>
+					<a class="back-link" href="/portfolio-2025-2/work/"><Icon icon="arrow-left" /> Projets</a>
 					<Hero title={entry.data.title} align="start">
 						<div class="details">
 							<div class="tags">
