--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -16,7 +16,7 @@ import CallToAction from "../components/CallToAction.astro";
 				<img
 					width="1553"
 					height="873"
-					src="/portfolio-2025-2/assets/me.ppg"
+					src="/portfolio-2025-2/public/assets/me.png"
 					alt="Manu Andriamihaja"
 				/>
 			</Hero>
