--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -5,7 +5,7 @@ import Icon from './Icon.astro';
 <section class="box skills">
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="terminal-window" color="var(--accent-regular)" size="2.5rem" gradient />
-		<h2>Du Dev de qualité supérieur</h2>
+		<h2>Du Dev de qualité supérieure</h2>
 		<p>J'ai surtout travaillé sur des projets en Java, ainsi que sur des projets web en HTML/CSS utilisant PHP, sans oublier le SQL et PL/SQL.</p>
 	</div>
 	<div class="stack gap-2 lg:gap-4">
